--- a/styles/index.css
+++ b/styles/index.css
@@ -158,3 +158,16 @@ a {
   width: 40%;
   height: 375px;
 }
+
+.parallax {
+    /* The image used */
+    background-image: url("img_parallax.jpg");
+
+    /* Set a specific height */
+    height: 500px;
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
