--- a/styles/index.css
+++ b/styles/index.css
@@ -171,6 +171,8 @@ a {
   /* Set the perspective to 2px. This is essentailly the simulated distance from
    * the viewport to transformed objects.*/
   perspective: 2px;
+
+  padding-top: 7%;
 }
 
 .section {
@@ -218,4 +220,21 @@ a {
 
 .bg2::after {
   background-image: url('../images/jitkor.jpg');
+}
+
+nav {
+    text-align: center;
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    left: 0%;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+nav a {
+    float: left;
+    display: block;
 }
