--- a/styles/parallax.css
+++ b/styles/parallax.css
@@ -1,7 +1,7 @@
 .wrapper {
   /* The height needs to be set to a fixed value for the effect to work.
    * 100vh is the full height of the viewport. */
-  height: 94vh;
+  height: 92vh;
   /* The scaling of the images would add a horizontal scrollbar, so disable x
    * overflow. */
   overflow-x: hidden;
@@ -11,7 +11,7 @@
    * the viewport to transformed objects.*/
   perspective: 2px;
 
-  padding-top: 7%;
+  margin-top: 20px;
 }
 
 .section {
