--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,5 @@
 body {
-    /* background-image: url(http://fjordstudio.dk/assets/img/bg/diamonds.png); */
-    font-family: "Calibri";
+    font-family: "Arial";
     color: black;
     font-size: 30px;
     padding-top: 30px;
