--- a/styles/index.css
+++ b/styles/index.css
@@ -31,12 +31,12 @@ nav {
     position: fixed;
     top: 0;
     width: 100%;
-    height: 57px;
+    height: 58px;
     left: 0%;
     list-style-type: none;
     margin: 0;
     padding: 0;
-    font-size: 25px;
+    font-size: 16px;
     background-color: #333;
     border-bottom: 5px solid whitesmoke;
 }
@@ -57,18 +57,25 @@ a {
 .item {
     background-color: #333;
     color: whitesmoke;
-    transition: 0.3s;
+    border-right: 1px solid whitesmoke;
+    transition: 0.5s;
+    padding-top: 20px;
+    height: 58px;
 }
 
 #selected {
     background-color: #4caf50;
-    transition: 0.3s;
+    transition: 0.5s;
+    padding-top: 20px;
+    border-right: 1px solid whitesmoke;
+    height: 58px;
 }
 
 .item:hover,
 #selected:hover {
     background-color: whitesmoke;
     color: #333;
+    height: 58px;
 }
 
 
