fixing stuff for john

--- a/styles/index.css
+++ b/styles/index.css
@@ -44,10 +44,6 @@ select:focus {
     outline: 0;
 }
 
-nav a:last-of-type{
-  border-right: 0px solid white;
-}
-
 a {
     text-decoration: none;
 }
@@ -86,6 +82,6 @@ nav {
 }
 
 nav a {
+    float: left;
     display: block;
-    width: 9%;
 }
