--- a/styles/index.css
+++ b/styles/index.css
@@ -13,10 +13,10 @@ h1, h2, h3 {
 nav {
   overflow: hidden;
   background-color: #333;
+  display: inline-block;
 }
 
 nav a {
-  float: left;
   display: block;
   color: whitesmoke;
   text-align: center;
@@ -25,6 +25,7 @@ nav a {
   font-size: 16px;
   border-bottom: 6px solid transparent;
   border-right: 1px solid whitesmoke;
+  width: 7%;
 }
 
 nav a:hover {
