--- a/styles/index.css
+++ b/styles/index.css
@@ -9,32 +9,32 @@ h1, h2, h3 {
     text-align: center;
 }
 
-/* Add a black background color to the top navigation */
-nav {
+/* Add a black background color to the top .topnavigation */
+ul.topnav {
   overflow: hidden;
-  background-color: #333;
+  background-color: #102811;
   display: inline-block;
+  margin-bottom: 0;
 }
 
-nav a {
+ul.topnav a {
   display: block;
   color: whitesmoke;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
   font-size: 16px;
-  border-bottom: 6px solid transparent;
-  border-right: 1px solid whitesmoke;
-  width: 7%;
+  border-bottom: 4px solid transparent;
+  margin-bottom: 0;
 }
 
-nav a:hover {
-  border-bottom: 6px solid #2c662f;
+.topnav a:hover {
+  border-bottom: 4px solid #3b843e;
 }
 
-nav a.active {
-  border-bottom: 6px solid #4caf50;
-  border-right: 1px solid whitesmoke;
+.topnav a.active {
+  border-bottom: 4px solid #3b843e;
+  font-weight: bold;
 }
 
 button:focus {
@@ -70,7 +70,7 @@ a {
   height: 375px;
 }
 
-nav {
+.topnav {
     text-align: center;
     overflow: hidden;
     position: fixed;
@@ -78,11 +78,15 @@ nav {
     width: 100%;
     left: 0%;
     list-style-type: none;
-    margin: 0;
+    margin: auto;
     padding: 0;
 }
+li.topnavli{
+  display: inline-block;
+  margin-bottom: 0;
+}
 
-nav a {
+.topnav a {
     float: left;
     display: block;
 }
