--- a/styles/index.css
+++ b/styles/index.css
@@ -30,6 +30,11 @@ ul.topnav a {
 
 .topnav a:hover {
   border-bottom: 4px solid #3b843e;
+  -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein .4s; /* Firefox < 16 */
+        -ms-animation: fadein .4s; /* Internet Explorer */
+         -o-animation: fadein .4s; /* Opera < 12.1 */
+            animation: fadein .4s;
 }
 
 .topnav a.active {
@@ -89,4 +94,38 @@ li.topnavli{
 .topnav a {
     float: left;
     display: block;
+}
+
+@keyframes fadeIn {
+   0% {border-bottom: 4px solid transparent }
+   100% {border-bottom: 4px solid #3b843e}
+}
+
+@keyframes fadein {
+    from {border-bottom: 4px solid transparent}
+    to   {border-bottom: 4px solid #3b843e}
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+  from {border-bottom: 4px solid transparent}
+  to   {border-bottom: 4px solid #3b843e}
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+  from {border-bottom: 4px solid transparent}
+  to   {border-bottom: 4px solid #3b843e}
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+  from {border-bottom: 4px solid transparent}
+  to   {border-bottom: 4px solid #3b843e}
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+  from {border-bottom: 4px solid transparent}
+  to   {border-bottom: 4px solid #3b843e}
 }
