--- a/styles/index.css
+++ b/styles/index.css
@@ -3,8 +3,11 @@ body {
     color: black;
     font-size: 30px;
     padding-top: 30px;
+    margin: 0;
 }
-
+.head{
+  font-size: 16px;
+}
 h1, h2, h3 {
     text-align: center;
 }
@@ -12,9 +15,10 @@ h1, h2, h3 {
 /* Add a black background color to the top .topnavigation */
 ul.topnav {
   overflow: hidden;
-  background-color: #102811;
+  background-color:#1f571f;
   display: inline-block;
   margin-bottom: 0;
+  position: fixed;
 }
 
 ul.topnav a {
@@ -29,7 +33,7 @@ ul.topnav a {
 }
 
 .topnav a:hover {
-  border-bottom: 4px solid #3b843e;
+  border-bottom: 4px solid #37b73c;
   -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
        -moz-animation: fadein .4s; /* Firefox < 16 */
         -ms-animation: fadein .4s; /* Internet Explorer */
@@ -38,7 +42,7 @@ ul.topnav a {
 }
 
 .topnav a.active {
-  border-bottom: 4px solid #3b843e;
+  border-bottom: 4px solid #37b73c;
   font-weight: bold;
 }
 
@@ -55,7 +59,7 @@ a {
 }
 
 #remind-widget {
-  position: absolute;
+  align-self: center;
   right: 0px;
   border: 0;
   width: 450px;
@@ -95,37 +99,46 @@ li.topnavli{
     float: left;
     display: block;
 }
+#drillselect{
+  background-color: #1f571f;
+  margin: 0;
+}
+
+#selector{
+  align-self: center;
+  color: whitesmoke;
+}
 
 @keyframes fadeIn {
    0% {border-bottom: 4px solid transparent }
-   100% {border-bottom: 4px solid #3b843e}
+   100% {border-bottom: 4px solid #37b73c}
 }
 
 @keyframes fadein {
     from {border-bottom: 4px solid transparent}
-    to   {border-bottom: 4px solid #3b843e}
+    to   {border-bottom: 4px solid #37b73c}
 }
 
 /* Firefox < 16 */
 @-moz-keyframes fadein {
   from {border-bottom: 4px solid transparent}
-  to   {border-bottom: 4px solid #3b843e}
+  to   {border-bottom: 4px solid #37b73c}
 }
 
 /* Safari, Chrome and Opera > 12.1 */
 @-webkit-keyframes fadein {
   from {border-bottom: 4px solid transparent}
-  to   {border-bottom: 4px solid #3b843e}
+  to   {border-bottom: 4px solid #37b73c}
 }
 
 /* Internet Explorer */
 @-ms-keyframes fadein {
   from {border-bottom: 4px solid transparent}
-  to   {border-bottom: 4px solid #3b843e}
+  to   {border-bottom: 4px solid #37b73c}
 }
 
 /* Opera < 12.1 */
 @-o-keyframes fadein {
   from {border-bottom: 4px solid transparent}
-  to   {border-bottom: 4px solid #3b843e}
+  to   {border-bottom: 4px solid #37b73c}
 }
