cleaned up hover transitions in the navbar

--- a/styles/index.css
+++ b/styles/index.css
@@ -34,11 +34,7 @@ ul.topnav a {
 
 .topnav a:hover {
   border-bottom: 4px solid #37b73c;
-  -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
-       -moz-animation: fadein .4s; /* Firefox < 16 */
-        -ms-animation: fadein .4s; /* Internet Explorer */
-         -o-animation: fadein .4s; /* Opera < 12.1 */
-            animation: fadein .4s;
+  transition: 0.2s;
 }
 
 .topnav a.active {
@@ -107,38 +103,4 @@ li.topnavli{
 #selector{
   align-self: center;
   color: whitesmoke;
-}
-
-@keyframes fadeIn {
-   0% {border-bottom: 4px solid transparent }
-   100% {border-bottom: 4px solid #37b73c}
-}
-
-@keyframes fadein {
-    from {border-bottom: 4px solid transparent}
-    to   {border-bottom: 4px solid #37b73c}
-}
-
-/* Firefox < 16 */
-@-moz-keyframes fadein {
-  from {border-bottom: 4px solid transparent}
-  to   {border-bottom: 4px solid #37b73c}
-}
-
-/* Safari, Chrome and Opera > 12.1 */
-@-webkit-keyframes fadein {
-  from {border-bottom: 4px solid transparent}
-  to   {border-bottom: 4px solid #37b73c}
-}
-
-/* Internet Explorer */
-@-ms-keyframes fadein {
-  from {border-bottom: 4px solid transparent}
-  to   {border-bottom: 4px solid #37b73c}
-}
-
-/* Opera < 12.1 */
-@-o-keyframes fadein {
-  from {border-bottom: 4px solid transparent}
-  to   {border-bottom: 4px solid #37b73c}
 }
