--- a/styles/index.css
+++ b/styles/index.css
@@ -14,7 +14,8 @@ h1, h2, h3 {
     text-align: center;
 }
 
-/* Add a black background color to the top .topnavigation */
+/* NAVBAR */
+
 ul.topnav {
   overflow: hidden;
   background-color:#1f571f;
@@ -42,6 +43,29 @@ ul.topnav a {
   border-bottom: 4px solid #37b73c;
   font-weight: bold;
 }
+
+.topnav {
+    text-align: center;
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    left: 0%;
+    list-style-type: none;
+    margin: auto;
+    padding: 0;
+}
+li.topnavli{
+  display: inline-block;
+  margin-bottom: 0;
+}
+
+.topnav a {
+    float: left;
+    display: block;
+}
+
+/* NOT NAVBAR */
 
 button:focus, select:focus {
     outline: 0;
@@ -72,26 +96,6 @@ a {
   height: 375px;
 }
 
-.topnav {
-    text-align: center;
-    overflow: hidden;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    left: 0%;
-    list-style-type: none;
-    margin: auto;
-    padding: 0;
-}
-li.topnavli{
-  display: inline-block;
-  margin-bottom: 0;
-}
-
-.topnav a {
-    float: left;
-    display: block;
-}
 #drillselect{
   background-color: #1f571f;
   margin: 0;
