finished main page

--- a/styles/index.css
+++ b/styles/index.css
@@ -7,7 +7,7 @@ Nav highlight:  #37b73c
 */
 
 body {
-    font-family: "Arial";
+    font-family: 'Trebuchet MS';
     color: black;
     font-size: 30px;
     padding-top: 30px;
@@ -156,4 +156,11 @@ a {
 #bandwagon ul {
     text-align: left;
     color: #993300;
+}
+
+#programphilosophy {
+  font-size: 25px;
+  margin-left: 10%;
+  margin-right: 10%;
+  text-align: center;
 }
