--- a/styles/index.css
+++ b/styles/index.css
@@ -125,7 +125,8 @@ a {
 }
 
 a {
-    color: dodgerblue;;
+    color: dodgerblue;
+    ;
     font-weight: bold;
 }
 
@@ -159,8 +160,8 @@ a {
 }
 
 #programphilosophy {
-  font-size: 25px;
-  margin-left: 10%;
-  margin-right: 10%;
-  text-align: center;
+    font-size: 25px;
+    margin-left: 10%;
+    margin-right: 10%;
+    text-align: center;
 }
